namespace HotelBookingSystem.Prototype
{
     public interface IPrototype<T>
     {
          T Clone();
     }
}