@startuml Lab3_Prototype

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontName "Segoe UI"
skinparam defaultFontName "Segoe UI"
skinparam shadowing false
skinparam linetype ortho

skinparam class {
    BackgroundColor #FEFEFE
    BorderColor #546E7A
    ArrowColor #546E7A
    HeaderBackgroundColor #E3F2FD
}
skinparam interface {
    BackgroundColor #E8F5E9
    BorderColor #2E7D32
}

title <b>Prototype Pattern — Room Templates</b>

note as GoFRoles
  <b>GoF Roles</b>
  Prototype        → IPrototype<T>
  ConcretePrototype → StandardRoomPrototype
                      DeluxeRoomPrototype
                      SuitePrototype
  Client           → RoomPrototypeRegistry
end note

interface "IPrototype<T>" as IPrototype {
    + Clone() : T
}

class StandardRoomPrototype implements IPrototype {
    + RoomNumber : string
    + BasePrice  : decimal
    + Capacity   : int
    + IsAvailable : bool
    --
    + Clone() : StandardRoomPrototype
    + GetDisplayInfo() : string
}

class DeluxeRoomPrototype implements IPrototype {
    + RoomNumber : string
    + BasePrice  : decimal
    + Capacity   : int
    + IsAvailable : bool
    + HasBalcony  : bool
    + Amenities   : List<string>
    --
    + Clone() : DeluxeRoomPrototype
    + GetDisplayInfo() : string
}

class SuitePrototype implements IPrototype {
    + RoomNumber    : string
    + BasePrice     : decimal
    + Capacity      : int
    + IsAvailable   : bool
    + HasKitchen    : bool
    + HasLivingRoom : bool
    + NumberOfRooms : int
    --
    + Clone() : SuitePrototype
    + GetDisplayInfo() : string
}

class RoomPrototypeRegistry {
    - _registry : Dictionary<string, Func<RoomTemplateSnapshot>>
    --
    + RoomPrototypeRegistry()
    + GetClone(key) : RoomTemplateSnapshot
    + GetAvailableTypes() : IReadOnlyCollection<string>
}

class RoomTemplateSnapshot {
    + RoomNumber  : string
    + BasePrice   : decimal
    + Capacity    : int
    + DisplayInfo : string
}

note right of DeluxeRoomPrototype
  Deep copies Amenities:
  new List<string>(Amenities)
end note

note right of RoomPrototypeRegistry
  Originals are never exposed.
  Each entry stores a Func<>
  that calls Clone() internally.
end note

RoomPrototypeRegistry ..> StandardRoomPrototype : <<clones>>
RoomPrototypeRegistry ..> DeluxeRoomPrototype   : <<clones>>
RoomPrototypeRegistry ..> SuitePrototype        : <<clones>>
RoomPrototypeRegistry ..> RoomTemplateSnapshot  : <<returns>>

@enduml
